TERRAFORM/modules/vpc/security_group.tf
#Description: This file contains the security group for the VPC module with the ingress and egress rules. The security group allows SSH and HTTPS traffic to be established.
resource "aws_security_group" "aws_security_group" {
  name = var.project
  vpc_id = aws_vpc.vpc.id


  ingress {
        description = "SSH from VPC"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


    ingress {
        description = "HTTP from VPC"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTPS from VPC"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        description = "All egress traffic"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.project}-security-group"
    }
}
